[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bundled-script-processor"
version = "0.1.0"
description = "A SageMaker-compatible BundledScriptProcessor for running tar-bundled source dirs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name="Pavel Maslov" }
]

dependencies = [
  "sagemaker>=2.75.1",
]

[project.urls]
Homepage = "https://github.com/maslick/bundled-script-processor"
Source = "https://github.com/maslick/bundled-script-processor"
Issues = "https://github.com/maslick/bundled-script-processor/issues"